--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/node,linux,macos,windows,webstorm
 
 
+docker-compose-mariadb/docker/mariadb/data
