--- a/docker-compose-nodejs/docker-compose.yml
+++ b/docker-compose-nodejs/docker-compose.yml
@@ -1,14 +1,14 @@
-version: "3.7"
+version: '3.7'
 services:
   app:
     image: node:latest
     container_name: nodejs
+    working_dir: /usr/src/service
     volumes:
       - ./node_modules:/usr/src/service/node_modules
       - .:/usr/src/service
     environment:
       - NODE_ENV=${NODE_ENV}
-    working_dir: /usr/src/service
     command: npm start
     ports:
       - ${NODE_PORT}:3000
