--- a/.gitignore
+++ b/.gitignore
@@ -242,5 +242,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,linux,macos,windows,webstorm
 
-
-docker-compose-mariadb/docker/mariadb/data
+*/docker/mariadb/data
